test/technotes/doc-examples/FirstClassProceduresInvalidAssignment.good
FirstClassProceduresInvalidAssignment.chpl:11: error: Cannot assign to proc(x: int, y: int): int from proc(a: int, b: int): int
